# kutils

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in~  config.status  configure  configure.ac  configure.scan  configure~  libtool  makefile  mf.am.bak
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/algorithms/: ku_comparators.h  ku_sorting.h  ku_swap.h  sorting.h  swap.h
include/data_structures/: ku_string.h  ku_vec.h  vec.h
m4/: aalib.m4  yad.m4
src/: Makefile.am
src/algorithms/searching/: ku_binarysearch.lo
src/algorithms/searching/.deps/: ku_binarysearch.Plo
src/algorithms/sorting/: insertionsort.c  ku_insertionsort.lo  ku_mergesort.c  ku_mergesort.lo  mergesort.c  sort_int.c
src/algorithms/sorting/.deps/: ku_insertionsort.Plo  ku_mergesort.Plo
src/algorithms/util/: ku_comparators.c  ku_comparators.lo  ku_swap.c  ku_swap.lo  swap.c
src/algorithms/util/.deps/: ku_comparators.Plo  ku_swap.Plo
src/data_structures/: ku_string.c  ku_vec.c  ku_vec.lo  vec.c
src/data_structures/.deps/: ku_string.Plo  ku_vec.Plo
tests/: Makefile.am  check_sorting.c  check_string.c  check_vec.c  test.c  test_sorting.c  test_swap.c  test_vec.c
tests/.deps/: bin_check_vec-check_vec.Po  check_vec.Po
